Add persistent paginated map API
